--- a/products/2-5-diaminotoluene-sulfate.html
+++ b/products/2-5-diaminotoluene-sulfate.html
@@ -7,90 +7,100 @@
 
   <link rel="stylesheet" href="/styles.css" />
   <style>
-    .site-header { background: #0b3d91; color: #fff; padding: 12px 20px; }
-    .site-header .brand { font-weight:700; letter-spacing:.5px; }
+    /* From products_product-template.html */
+    .site-header {
+      background: #0b3d91;
+      color: #fff;
+      padding: 12px 20px;
+    }
+    .site-header .brand { font-weight:700; letter-spacing:.5px; color:#fff; text-decoration:none; }
     .site-nav { display:flex; gap:12px; align-items:center; }
+    .site-nav a { color:#fff; text-decoration:none; padding:6px 8px; }
     .container { max-width:1100px; margin:20px auto; padding:0 16px; }
-    .product-info h1 { margin:0 0 8px; font-size:28px; }
     .prop-table { border-collapse:collapse; width:100%; max-width:720px; }
     .prop-table td, .prop-table th { border:1px solid #e6e9ef; padding:8px; text-align:left; vertical-align:top; }
+    footer.site-footer {
+      margin-top:40px;
+      padding:18px 0;
+      background:#f5f5f7;
+      color:#222;
+      font-size:14px;
+    }
+    footer .footer-inner { display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap; }
   </style>
 </head>
 <body>
   <header class="site-header" role="banner">
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
-      <a class="brand" href="/">SYNVERTA</a>
-      <nav class="site-nav" aria-label="Main navigation">
-        <a href="/products.html">Products</a>
-        <a href="/about/">About</a>
-        <a href="/contact/">Contact</a>
+      <a class="brand" href="/" aria-label="SYNVERTA home">SYNVERTA</a>
+      <nav class="site-nav" role="navigation" aria-label="Main navigation">
+        <a href="/" title="Home">Home</a>
+        <a href="/products.html" title="Products">Products</a>
+        <a href="/about/" title="About">About</a>
+        <a href="/contact/" title="Contact">Contact</a>
       </nav>
     </div>
   </header>
 
   <main class="container" role="main">
-    <article class="product-info">
-      <h1>2,5-Diaminotoluene sulfate</h1>
-      <p class="product-summary">A salt form of 2,5-diaminotoluene used predominantly in hair-dye intermediates and specialty chemical synthesis; provided as a crystalline sulfate salt for improved handling and solubility in aqueous formulations.</p>
+    <article class="product-hero" aria-labelledby="product-title">
+      <div class="product-info">
+        <h1 id="product-title">2,5-Diaminotoluene sulfate</h1>
+        <p class="product-summary">A salt form of 2,5-diaminotoluene used predominantly in hair-dye intermediates and specialty chemical synthesis; provided as a crystalline sulfate salt for improved handling.</p>
 
-      <section style="margin-top:18px;">
-        <h2>Overview</h2>
-        <p>2,5-Diaminotoluene sulfate is the sulfate salt of the aromatic diamine 2,5-diaminotoluene. The sulfate form improves water compatibility and handling compared with the free base. It is widely used as an intermediate in oxidative hair dye formulations and as a building block for dyes, pigments and specialty organics.</p>
+        <div class="cta-row" style="margin-top:16px;">
+          <a class="secondary-link" href="/products.html" style="color:#666;text-decoration:none;">Back to products</a>
+        </div>
 
-        <h3>Common Synonyms</h3>
-        <ul>
-          <li>2,5-Diaminotoluene sulfate</li>
-          <li>Toluene-2,5-diamine sulfate</li>
-          <li>2,5-Toluenediamine sulfate</li>
-        </ul>
+        <section class="product-details" aria-labelledby="details-heading" style="margin-top:18px;">
+          <h2 id="details-heading" style="font-size:18px;margin:0 0 8px 0;">Overview</h2>
+          <p>2,5-Diaminotoluene sulfate is the sulfate salt of the aromatic diamine 2,5-diaminotoluene. The sulfate form improves water compatibility and handling compared with the free base. It is widely used [...]</p>
 
-        <h3>Typical Applications</h3>
-        <ul>
-          <li>Oxidative hair dye intermediates (regulated cosmetic use)</li>
-          <li>Intermediate for azo and direct dye synthesis</li>
-          <li>Specialty pigment and reagent manufacture</li>
-          <li>Research and development in colorant chemistry</li>
-        </ul>
+          <h3>Common Synonyms</h3>
+          <ul>
+            <li>2,5-Diaminotoluene sulfate</li>
+            <li>Toluene-2,5-diamine sulfate</li>
+            <li>2,5-Toluenediamine sulfate</li>
+          </ul>
 
-        <h3>Physical & Chemical Properties</h3>
-        <table class="prop-table" aria-label="Physical and chemical properties">
-          <tr><th>Property</th><th>Typical Value</th></tr>
-          <tr><td>Chemical form</td><td>Sulfate salt of 2,5-diaminotoluene</td></tr>
-          <tr><td>Appearance</td><td>White to off-white crystalline powder</td></tr>
-          <tr><td>Molecular weight</td><td>varies by salt stoichiometry (approx. base + 96 for H2SO4 addition)</td></tr>
-          <tr><td>Solubility</td><td>Soluble in water; soluble in polar solvents</td></tr>
-          <tr><td>Stability</td><td>Stable when stored dry and protected from strong oxidizers and light</td></tr>
-        </table>
+          <h3>Typical Applications</h3>
+          <ul>
+            <li>Oxidative hair dye intermediates (regulated cosmetic use)</li>
+            <li>Intermediate for azo and direct dye synthesis</li>
+            <li>Specialty pigment and reagent manufacture</li>
+            <li>Research and development in colorant chemistry</li>
+          </ul>
 
-        <h3>Typical Specifications</h3>
-        <ul>
-          <li>Purity: commonly ≥95–99% (supplier grade dependent)</li>
-          <li>Appearance: crystalline powder</li>
-          <li>Moisture/content and assay: per supplier Certificate of Analysis</li>
-        </ul>
+          <h3>Physical & Chemical Properties</h3>
+          <table class="prop-table" aria-label="Physical and chemical properties">
+            <tr><th>Property</th><th>Typical Value</th></tr>
+            <tr><td>Chemical form</td><td>Sulfate salt of 2,5-diaminotoluene</td></tr>
+            <tr><td>Appearance</td><td>White to off-white crystalline powder</td></tr>
+            <tr><td>Solubility</td><td>Soluble in water; soluble in polar solvents</td></tr>
+            <tr><td>Stability</td><td>Stable when stored dry and protected from strong oxidizers and light</td></tr>
+          </table>
 
-        <h3>Handling & Safety</h3>
-        <p>As an aromatic diamine salt, it can cause skin and eye irritation and may be a sensitizer. Follow precautions below:</p>
-        <ul>
-          <li>Use gloves, eye protection and protective clothing; avoid inhalation of dust.</li>
-          <li>Handle in well-ventilated areas or fume hood.</li>
-          <li>In case of contact, flush with water and seek medical advice for severe effects.</li>
-          <li>Dispose of waste per local hazardous waste regulations; avoid environmental release.</li>
-        </ul>
-
-        <h3>Packaging & Storage</h3>
-        <ul>
-          <li>Packaging: sealed plastic or foil-lined bags, drums or bottles depending on quantity.</li>
-          <li>Storage: cool, dry, well-ventilated area away from strong oxidizing agents and acids; keep tightly closed.</li>
-        </ul>
-      </section>
+          <h3>Handling & Safety</h3>
+          <p>As an aromatic diamine salt, it can cause skin and eye irritation and may be a sensitizer. Follow precautions below:</p>
+          <ul>
+            <li>Use gloves, eye protection and protective clothing; avoid inhalation of dust.</li>
+            <li>Handle in well-ventilated areas or fume hood.</li>
+            <li>In case of contact, flush with water and seek medical advice for severe effects.</li>
+          </ul>
+        </section>
+      </div>
     </article>
   </main>
 
-  <footer style="margin-top:40px;padding:18px 0;background:#f5f5f7;color:#222;">
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
-      <div><strong>SYNVERTA</strong><div>Contact: <a href="mailto:contact@synverta.org">contact@synverta.org</a></div></div>
-      <div style="color:#666;">© <span id="year"></span> SYNVERTA</div>
+  <footer class="site-footer" role="contentinfo">
+    <div class="container footer-inner">
+      <div class="footer-left">
+        <strong>SYNVERTA</strong>
+        <div>Contact: <a href="mailto:contact@synverta.org">contact@synverta.org</a></div>
+      </div>
+      <div class="footer-right" style="color:#666;">
+        © <span id="year"></span> SYNVERTA
+      </div>
     </div>
   </footer>
 
