--- a/products/melamine.html
+++ b/products/melamine.html
@@ -7,85 +7,107 @@
 
   <link rel="stylesheet" href="/styles.css" />
   <style>
-    .site-header { background:#0b3d91;color:#fff;padding:12px 20px; }
-    .container { max-width:1100px;margin:20px auto;padding:0 16px; }
-    .prop-table td, .prop-table th { border:1px solid #e6e9ef;padding:8px;text-align:left;vertical-align:top; }
+    /* From products_product-template.html */
+    .site-header {
+      background: #0b3d91;
+      color: #fff;
+      padding: 12px 20px;
+    }
+    .site-header .brand { font-weight: 700; letter-spacing: .5px; color:#fff; text-decoration:none; }
+    .site-nav { display:flex; gap:12px; align-items:center; }
+    .site-nav a { color:#fff; text-decoration:none; padding:6px 8px; }
+    .container { max-width:1100px; margin:20px auto; padding:0 16px; }
+    .prop-table td, .prop-table th { border:1px solid #e6e9ef; padding:8px; text-align:left; vertical-align:top; }
+    footer.site-footer {
+      margin-top:40px;
+      padding:18px 0;
+      background:#f5f5f7;
+      color:#222;
+      font-size:14px;
+    }
+    footer .footer-inner { display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap; }
   </style>
 </head>
 <body>
-  <header class="site-header">
+  <header class="site-header" role="banner">
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
-      <a class="brand" href="/">SYNVERTA</a>
-      <nav class="site-nav"><a href="/products.html">Products</a></nav>
+      <a class="brand" href="/" aria-label="SYNVERTA home">SYNVERTA</a>
+      <nav class="site-nav" role="navigation" aria-label="Main navigation">
+        <a href="/" title="Home">Home</a>
+        <a href="/products.html" title="Products">Products</a>
+        <a href="/about/" title="About">About</a>
+        <a href="/contact/" title="Contact">Contact</a>
+      </nav>
     </div>
   </header>
 
-  <main class="container">
-    <article>
-      <h1>Melamine (1,3,5-Triazine-2,4,6-triamine)</h1>
-      <p class="product-summary">A triazine compound used principally as a precursor to melamine resins, laminates, adhesives and flame-retardant materials.</p>
+  <main class="container" role="main">
+    <article class="product-hero" aria-labelledby="product-title">
+      <div class="product-info">
+        <h1 id="product-title">Melamine (1,3,5-Triazine-2,4,6-triamine)</h1>
+        <p class="product-summary">A triazine compound used principally as a precursor to melamine resins, laminates, adhesives and flame-retardant materials.</p>
 
-      <section>
-        <h2>Overview</h2>
-        <p>Melamine is a nitrogen-rich heterocyclic compound notable for its high nitrogen content and ability to form strong thermoset resins with formaldehyde. Melamine-formaldehyde resins are used in laminates, coatings, molding compounds and adhesives.</p>
+        <div class="cta-row" style="margin-top:16px;">
+          <a class="secondary-link" href="/products.html" style="color:#666;text-decoration:none;">Back to products</a>
+        </div>
 
-        <h3>Common Synonyms</h3>
-        <ul>
-          <li>Melamine</li>
-          <li>1,3,5-Triazine-2,4,6-triamine</li>
-          <li>Triazine triamine</li>
-        </ul>
+        <section class="product-details" aria-labelledby="details-heading" style="margin-top:18px;">
+          <h2 id="details-heading" style="font-size:18px;margin:0 0 8px 0;">Overview</h2>
+          <p>Melamine is a nitrogen-rich heterocyclic compound notable for its high nitrogen content and ability to form strong thermoset resins with formaldehyde. Melamine-formaldehyde resins are used [...]</p>
 
-        <h3>Typical Applications</h3>
-        <ul>
-          <li>Melamine-formaldehyde resins for laminates and molding compounds</li>
-          <li>Flame-retardant additives and coatings</li>
-          <li>Adhesives, paper impregnation and decorative surfaces</li>
-          <li>Industrial intermediate in polymer chemistry</li>
-        </ul>
+          <h3>Common Synonyms</h3>
+          <ul>
+            <li>Melamine</li>
+            <li>1,3,5-Triazine-2,4,6-triamine</li>
+            <li>Triazine triamine</li>
+          </ul>
 
-        <h3>Physical & Chemical Properties</h3>
-        <table class="prop-table" aria-label="Properties">
-          <tr><th>Property</th><th>Typical Value</th></tr>
-          <tr><td>Chemical formula</td><td>C3H6N6</td></tr>
-          <tr><td>Molecular weight</td><td>126.12 g·mol⁻¹</td></tr>
-          <tr><td>Appearance</td><td>White crystalline powder</td></tr>
-          <tr><td>Melting point</td><td>~354 °C (decomposes)</td></tr>
-          <tr><td>Solubility</td><td>Soluble in hot water; slightly soluble in cold water; insoluble in most organic solvents</td></tr>
-          <tr><td>Density</td><td>~1.57 g·cm⁻³</td></tr>
-        </table>
+          <h3>Typical Applications</h3>
+          <ul>
+            <li>Melamine-formaldehyde resins for laminates and molding compounds</li>
+            <li>Flame-retardant additives and coatings</li>
+            <li>Adhesives, paper impregnation and decorative surfaces</li>
+            <li>Industrial intermediate in polymer chemistry</li>
+          </ul>
 
-        <h3>Typical Specifications</h3>
-        <ul>
-          <li>Purity: typically ≥99% for industrial/resin grades</li>
-          <li>Appearance: white crystalline powder</li>
-          <li>Moisture and ash controlled per supplier COA</li>
-        </ul>
+          <h3>Physical & Chemical Properties</h3>
+          <table class="prop-table" aria-label="Properties">
+            <tr><th>Property</th><th>Typical Value</th></tr>
+            <tr><td>Chemical formula</td><td>C3H6N6</td></tr>
+            <tr><td>Molecular weight</td><td>126.12 g·mol⁻¹</td></tr>
+            <tr><td>Appearance</td><td>White crystalline powder</td></tr>
+            <tr><td>Melting point</td><td>~354 °C (decomposes)</td></tr>
+            <tr><td>Solubility</td><td>Soluble in hot water; slightly soluble in cold water; insoluble in most organic solvents</td></tr>
+            <tr><td>Density</td><td>~1.57 g·cm⁻³</td></tr>
+          </table>
 
-        <h3>Handling & Safety</h3>
-        <p>Melamine is low in acute toxicity but can cause irritation to eyes and respiratory tract if dust is inhaled. Follow standard precautions:</p>
-        <ul>
-          <li>Use dust control, gloves, and eye protection in handling powdered material.</li>
-          <li>Avoid ingestion and prolonged skin contact.</li>
-          <li>Store in a dry place away from strong oxidizing agents and formaldehyde sources until intended for resin production.</li>
-        </ul>
-
-        <h3>Packaging & Storage</h3>
-        <ul>
-          <li>Packaging: lined bags, drums, bulk bags (ton bags) for industrial volumes.</li>
-          <li>Storage: cool, dry, well-ventilated area; protect from moisture.</li>
-        </ul>
-      </section>
+          <h3>Handling & Safety</h3>
+          <p>Melamine is low in acute toxicity but can cause irritation to eyes and respiratory tract if dust is inhaled. Follow standard precautions:</p>
+          <ul>
+            <li>Use dust control, gloves, and eye protection in handling powdered material.</li>
+            <li>Avoid ingestion and prolonged skin contact.</li>
+            <li>Store in a dry place away from strong oxidizing agents and formaldehyde sources until intended for resin production.</li>
+          </ul>
+        </section>
+      </div>
     </article>
   </main>
 
-  <footer style="margin-top:40px;padding:18px 0;background:#f5f5f7;">
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
-      <div><strong>SYNVERTA</strong><div>Contact: <a href="mailto:contact@synverta.org">contact@synverta.org</a></div></div>
-      <div style="color:#666;">© <span id="year"></span> SYNVERTA</div>
+  <footer class="site-footer" role="contentinfo">
+    <div class="container footer-inner">
+      <div class="footer-left">
+        <strong>SYNVERTA</strong>
+        <div>Contact: <a href="mailto:contact@synverta.org">contact@synverta.org</a></div>
+      </div>
+      <div class="footer-right" style="color:#666;">
+        © <span id="year"></span> SYNVERTA
+      </div>
     </div>
   </footer>
 
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script>
+    // Set current year in footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
