--- a/products/3-amino-2-chloro-6-methylphenol.html
+++ b/products/3-amino-2-chloro-6-methylphenol.html
@@ -52,7 +52,7 @@
 
         <section class="product-details" aria-labelledby="details-heading" style="margin-top:18px;">
           <h2 id="details-heading" style="font-size:18px;margin:0 0 8px 0;">Overview</h2>
-          <p>3-Amino-2-chloro-6-methylphenol is a multifunctional aromatic intermediate combining amino, chloro and methyl substituents on a phenolic core. It is used primarily in colorant chemistry and[...]</p>
+          <p>3-Amino-2-chloro-6-methylphenol is a multifunctional aromatic intermediate combining amino, chloro and methyl substituents on a phenolic core. It is used primarily in colorant chemistry</p>
 
           <h3>Synonyms</h3>
           <ul>
