--- a/products/melamine.html
+++ b/products/melamine.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>3-Amino-2-chloro-6-methylphenol — SYNVERTA</title>
+  <title>melamine — SYNVERTA</title>
 
   <link rel="stylesheet" href="/styles.css" />
   <style>
