--- a/products/3-amino-2-chloro-6-methylphenol.html
+++ b/products/3-amino-2-chloro-6-methylphenol.html
@@ -50,6 +50,10 @@
     </div>
   </header>
 
+  <main class="container" role="main">
+    <article class="product-hero" aria-labelledby="product-title">
+      <div class="product-info">
+        <h1 id="product-title">3-Amino-2-chloro-6-methylphenol</h1>
         <section class="product-details" aria-labelledby="details-heading" style="margin-top:18px;">
           <h2 id="details-heading" style="font-size:18px;margin:0 0 8px 0;">Overview</h2>
           <p>3-Amino-2-chloro-6-methylphenol is a multifunctional aromatic intermediate combining amino, chloro and methyl substituents on a phenolic core. It is used primarily in colorant chemistry</p>
