--- a/products/citric-acid-monohydrate.html
+++ b/products/citric-acid-monohydrate.html
@@ -41,12 +41,13 @@
   <header class="site-header" role="banner">
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
       <a class="brand" href="/" aria-label="SYNVERTA home" style="color:#fff;text-decoration:none;">SYNVERTA</a>
-      <nav class="site-nav" role="navigation" aria-label="Main navigation">
-        <a href="/" title="Home">Home</a>
-        <a href="/products.html" title="Products">Products</a>
-        <a href="/about/" title="About">About</a>
-        <a href="/contact/" title="Contact">Contact</a>
-      </nav>
+      <nav>
+  <a class="logo" href="index.html">Synverta</a>
+  <a href="about.html">About Us</a>
+  <a href="products.html">Products</a>
+  <a href="contact.html">Contact</a>
+  <a href="blog.html">Blog</a>
+</nav>
     </div>
   </header>
 
@@ -62,7 +63,7 @@
 
         <section class="product-details prod-section" aria-labelledby="details-heading">
           <h2 id="details-heading" style="font-size:18px;margin:0 0 8px 0;">Overview</h2>
-          <p>Citric acid monohydrate is the hydrated crystalline form of citric acid commonly used in food, pharmaceutical, cosmetic and industrial applications as an acidulant, chelating agent, and descaling agent. It typically provides stable acidity and improves flavor profiles in food applications.</p>
+          <p>Citric acid monohydrate is the hydrated crystalline form of citric acid commonly used in food, pharmaceutical, cosmetic and industrial applications as an acidulant, chelating agent, and d[...]
 
           <h3 style="margin-top:12px;">Common Synonyms</h3>
           <ul>
@@ -116,7 +117,7 @@
           <ul>
             <li>Packaging: sealed PE bags, drums, HDPE containers, and laboratory vials.</li>
             <li>Storage: keep tightly closed in a dry, cool, and well-ventilated area; avoid moisture to prevent caking.</li>
-            <li>Shelf life: per supplier guidance — stable when stored properly.</li>
+            <li>Shelf life: stable when stored properly.</li>
           </ul>
 
         </section>
